# auxide

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  SAFETY.md  SPONSORS.md  auxide_sorcery_spellbook_and_execution_plan.md
.docs/: KERNEL_FREEZE.md
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: ci.yml
benches/: rt_bench.rs
ci/: gate.sh
docs/: ARCHITECTURE.md  FAQ.md  INVARIANTS.md  RELEASE_NOTES.md  SPELL_DSP_0.1.0_COMPLETION.md  SPELL_DSP_TRAIT_PLAN.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.2.0.md  v0.2.1.md  v0.2.2.md
examples/: am_synth.rs  basic_sine.rs  filter_chain.rs  fm_synth.rs  gain_chain.rs  mixer.rs  offline_render.rs  proof_it_works.rs  sequencer.rs
src/: control.rs  dsl.rs  graph.rs  harness.rs  invariant_ppt.rs  invariant_rt.rs  lib.rs  node.rs  plan.rs  rt.rs  states.rs
tests/: dsp_gain_mix.rs  dsp_osc.rs  dsp_silence.rs  graph_invariants.rs  graph_props.rs  integration_ppt.rs  offline_render.rs  plan_determinism.rs  plan_isolation.rs  plan_topology.rs  rt_alloc.rs  rt_invariant_contracts.rs  rt_no_panic.rs  rt_no_ppt.rs  rt_timing.rs
