[package]
name = "auxide"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Michael-A-Kuykendall/auxide"
description = "Real-time-safe, deterministic audio graph kernel"
keywords = ["audio", "graph", "real-time", "dsp", "kernel"]
categories = ["multimedia::audio", "concurrency"]

[features]
ppt = []

[dependencies]
lazy_static = "1.4"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

[[bench]]
name = "rt_bench"
harness = false
