[package]
name = "auxide"
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Michael-A-Kuykendall/auxide"
description = "Real-time-safe, deterministic audio graph kernel"
keywords = ["audio", "graph", "real-time", "dsp", "kernel"]
categories = ["multimedia::audio", "concurrency"]

[features]
ppt = []
default = ["ppt"]

[dependencies]
hound = "3.5.1"
lazy_static = "1.4"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

[[bench]]
name = "rt_bench"
harness = false
